--- a/public/pages/search.car.html
+++ b/public/pages/search.car.html
@@ -20,6 +20,10 @@
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../fontawesome-free-6.2.0-web/css/all.css">
+
+  <!-- Date Time -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css"
+    rel="stylesheet" />
 </head>
 
 <body>
@@ -27,7 +31,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light py-3" aria-label="Offcanvas navbar large">
       <div class="container-xxl">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="http://localhost:5000">
           <img src="../assets/logo.png" alt="logo">
         </a>
         <a class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2"
@@ -84,42 +88,42 @@
         </div>
       </div>
     </div>
-
-    <!-- <button id="load-btn">Load</button> -->
-    <!-- <button id="clear-btn">Clear</button> -->
-    <!-- <div id="cars-container"></div> -->
   </section>
 
   <section class="container p-5 ">
     <div class="container bg-body shadow-sm rounded-3 mb-5 position-relative" style="margin-top: -105px">
-      <div class="card-filter d-flex pb-4 pt-4 px-4 justify-content-between" style="font-size: 14px">
-        <div class="">
+      <div class="card-filter d-lg-flex pb-4 pt-4 px-4 justify-content-between" style="font-size: 14px">
+        <div class="pt-4 pt-lg-0" style="min-width: 250px;">
           <label for="" class="form-label">Tipe Driver</label>
-          <input type="tipe-driver" class="form-control" id="tipe-driver" aria-describedby="emailHelp">
+          <select class="form-select" aria-label="Default select example">
+            <option selected>Pilih Tipe Driver</option>
+            <option value="1">Dengan Driver</option>
+            <option value="2">Tanpa Driver</option>
+          </select>
         </div>
-        <div class="" id="datepicker">
-          <label for="" class="form-label">Tanggal</label>
-          <input type="tanggal" class="form-control" id="tanggal" aria-describedby="date">
+        <div class="pt-4 pt-lg-0" style="min-width: 250px;" id="datepicker">
+          <label class="form-label">Tanggal</label>
+          <input id="startDate" class="form-control" type="date" />
         </div>
-        <div class="">
-          <label for="" class="form-label">Waktu Jemput/Ambil</label>
-          <input type="waktu-jemput" class="form-control" id="waktu-jemput" aria-describedby="emailHelp">
+        <div class="pt-4 pt-lg-0" style="min-width: 250px;">
+          <label class="form-label">Waktu Jemput/Ambil</label>
+          <div class='input-group date' id='datetimepicker3'>
+            <input type='text' class="form-control border-right-0 border" type="datetime" />
+            <div class="input-group-text input-group-addon bg-transparent"><i class="fa-regular fa-clock"></i></div>
+          </div>
         </div>
-        <div class="">
+        <div class="pt-4 pt-lg-0" style="min-width: 250px;">
           <label for="" class="form-label">Jumlah Penumpang (optional)</label>
           <input type="jumlah-penumpang" class="form-control" id="jumlah-penumpang" aria-describedby="emailHelp">
         </div>
-        <div class="d-flex align-items-end gap-2">
-          <button id="clear-btn" class="btn btn-danger rounded-1 fw-normal px-3"
-            data-bs-dismiss="offcanvas">Hapus</button>
-          <button id="load-btn" class="btn btn-green rounded-1 fw-normal px-3" data-bs-dismiss="offcanvas">Cari
+        <div class="d-flex align-items-end mt-4 gap-2">
+          <button id="load-btn" class="btn btn-green rounded-1 fw-normal px-3 w-100" data-bs-dismiss="offcanvas">Cari
             mobil</button>
         </div>
       </div>
     </div>
     <div class="container text-center">
-      <div id="cars-container" class="row row-cols-4 justify-content-between g-4">
-        
+      <div id="cars-container" class="row row-cols-lg-4 row-cols-md-2 justify-content-between g-4">
       </div>
     </div>
 
@@ -198,9 +202,23 @@
   <script src="../scripts/script.js"></script>
   <!-- Example Javascript -->
   <script type="text/javascript" src="./scripts/binar.js"></script>
-  <script type="text/javascript" src="./scripts/app.example.js"></script>
-  <script type="text/javascript" src="./scripts/car.example.js"></script>
-  <script type="text/javascript" src="./scripts/main.example.js"></script>
+  <script type="text/javascript" src="./scripts/app.js"></script>
+  <script type="text/javascript" src="./scripts/car.js"></script>
+  <script type="text/javascript" src="./scripts/main.js"></script>
+
+  <!-- Date Time -->
+  <script type="text/javascript">
+    $(function () {
+      $('#datetimepicker3').datetimepicker({
+        format: 'HH:mm'
+      });
+    });
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js" type="text/javascript"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 </body>
 
 </html>
