--- a/public/pages/search.car.html
+++ b/public/pages/search.car.html
@@ -20,10 +20,7 @@
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../fontawesome-free-6.2.0-web/css/all.css">
-
-  <!-- Date Time -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css"
-    rel="stylesheet" />
+  
 </head>
 
 <body>
@@ -95,7 +92,7 @@
       <div class="card-filter d-lg-flex pb-4 pt-4 px-4 justify-content-between" style="font-size: 14px">
         <div class="pt-4 pt-lg-0" style="min-width: 250px;">
           <label for="" class="form-label">Tipe Driver</label>
-          <select class="form-select" aria-label="Default select example">
+          <select class="form-select" id="type" aria-label="Default select example">
             <option selected>Pilih Tipe Driver</option>
             <option value="1">Dengan Driver</option>
             <option value="2">Tanpa Driver</option>
@@ -107,14 +104,19 @@
         </div>
         <div class="pt-4 pt-lg-0" style="min-width: 250px;">
           <label class="form-label">Waktu Jemput/Ambil</label>
-          <div class='input-group date' id='datetimepicker3'>
-            <input type='text' class="form-control border-right-0 border" type="datetime" />
-            <div class="input-group-text input-group-addon bg-transparent"><i class="fa-regular fa-clock"></i></div>
-          </div>
+          <select class="form-select" id="pilih-waktu" aria-label="Default select example">
+            <option selected>Pilih Waktu</option>
+            <option value="1">08.00 WIB</option>
+            <option value="2">09.00 WIB</option>
+            <option value="3">10.00 WIB</option>
+            <option value="4">11.00 WIB</option>
+            <option value="5">12.00 WIB</option>
+          </select>
         </div>
+    
         <div class="pt-4 pt-lg-0" style="min-width: 250px;">
           <label for="" class="form-label">Jumlah Penumpang (optional)</label>
-          <input type="jumlah-penumpang" class="form-control" id="jumlah-penumpang" aria-describedby="emailHelp">
+          <input type="jumlah-penumpang" class="form-control" id="passenger-count" placeholder="Jumlah Penumpang">
         </div>
         <div class="d-flex align-items-end mt-4 gap-2">
           <button id="load-btn" class="btn btn-green rounded-1 fw-normal px-3 w-100" data-bs-dismiss="offcanvas">Cari
@@ -205,20 +207,6 @@
   <script type="text/javascript" src="./scripts/app.js"></script>
   <script type="text/javascript" src="./scripts/car.js"></script>
   <script type="text/javascript" src="./scripts/main.js"></script>
-
-  <!-- Date Time -->
-  <script type="text/javascript">
-    $(function () {
-      $('#datetimepicker3').datetimepicker({
-        format: 'HH:mm'
-      });
-    });
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js" type="text/javascript"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 </body>
 
 </html>
